fixed background image to always be height of viewport and remain fixed, audio works conditionally (works on Articuno if it loads directly, but functionality breaks when scrolling with the dpad), also added overflow to body CSS to allow frame to remain intact at larger zooms

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -3,11 +3,14 @@ body {
     background-image: url("https://pbs.twimg.com/media/EC6sQO_UYAIt1Zz?format=png&name=medium");
     background-size: cover;
     background-repeat: no-repeat;
-    height: fit-content;
+    height: 100vh;
+    width: auto;
+    background-attachment:fixed;
+    overflow: auto;
   }
 
 
-/* outer box stlying */
+/* outer box styling */
 
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
