--- a/src/bird-display.css
+++ b/src/bird-display.css
@@ -19,11 +19,15 @@
     align-items: center;    
 }
 
+.button-wrapper {
+    position: relative;
+}
+
 .button-container {
     width: 200px;
     height: 200px;
-    top: 400px;
-    right: 400px;
+    /* top: 50%; */
+    left: 300px;
     position: absolute;
     background-color: rgba(128, 128, 128, 0.75);
     border: 1px black solid;
